# OpenJK

./: CMakeLists.txt
cmake/Modules/: DXC.cmake
code/: CMakeLists.txt
code/rd-vulkan/: .clang-format  CMakeLists.txt  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  qvk.h  tr_WorldEffects.cpp  tr_backend.cpp  tr_bsp.cpp  tr_buffer.cpp  tr_builders.cpp  tr_cmds.cpp  tr_draw.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_quicksprite.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shader.h  tr_shadows.cpp  tr_skin.cpp  tr_sky.cpp  tr_spv.cpp  tr_stl.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp
code/rd-vulkan/VulkanMemoryAllocator/: vk_mem_alloc.h
code/rd-vulkan/shaders/: fxaa3_11.hlsl  tr_blur.hlsl  tr_blur_combine.hlsl  tr_common.hlsl  tr_dissolve.hlsl  tr_fxaa.hlsl  tr_noise.hlsl  tr_shade.hlsl  tr_shade_calc.hlsl  tr_shade_ghoul2.hlsl  tr_shade_md3.hlsl  tr_shadows.hlsl  tr_skybox.hlsl  tr_skybox_fog.hlsl  tr_sun.hlsl  tr_wireframe.hlsl
lib/compressonator/: CMakeLists.txt
lib/compressonator/lib/x64/: CMP_Core.lib
lib/compressonator/lib/x86/: CMP_Core.lib
shared/sdl/: sdl_window.cpp
shared/sys/: sys_public.h
